# bachelorthesis

./: .gitattributes  .gitignore  BVH.cpp  Buffer.cpp  CMakeLists.txt  Estimator.cpp  LICENSE.md  Material.cpp  MeshObject.cpp  Primitive.cpp  README.md  Scene.cpp  main.cpp
.github/workflows/: cmake.yml
include/: Aabb.h  BVH.h  Buffer.h  DirectionSampling.h  Estimator.h  Float.h  HitRecord.h  Material.h  Matrix.h  MeshObject.h  Primitive.h  Ray.h  Sampler.h  Scene.h  Spectrum.h
test/: BVHTest.cpp  CMakeLists.txt  DirectionSamplingTest.cpp  ERNST2019.csv  ERNST_WITH_MATERIALS.gltf  ERNST_truescale.gltf  EstimatorTest.cpp  FloatTest.cpp  MatrixTest.cpp  PrimitiveTest.cpp  SceneTest.cpp  TimeBVHSplitMethods.sh  adjacentSquares_90d_0.20004.gltf  bvhtest.gltf  bvhtest2.gltf  cube.gltf  diffSquare.gltf  output.txt  planeInSphere.gltf  sceneTriangleTest.gltf  spheres_highres.gltf  triangle.gltf  twoSquares.gltf  vizMesh.m
test/analysis/: plot_errorbar.py
tinygltf/: CMakeLists.txt  json.hpp
